fix button alignment

--- a/styles/pages/Events.module.scss
+++ b/styles/pages/Events.module.scss
@@ -104,7 +104,7 @@
     max-width: 300px;
   }
 
-  button {
+  & > button {
     margin-top: 54px;
     height: 40px;
     width: 100%;
